# pyrl

./: .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_RU.md  app.db  generate_examples.py  pyproject.toml  pyrl_cli.py  pyrl_server.py  requirements.txt  run_examples.py  run_tests.py  run_web_app.py  test_report.md
checkpoints/: checkpoint_epoch_1.json  checkpoint_epoch_10.json  checkpoint_epoch_2.json  checkpoint_epoch_3.json  checkpoint_epoch_4.json  checkpoint_epoch_5.json  checkpoint_epoch_6.json  checkpoint_epoch_7.json  checkpoint_epoch_8.json  checkpoint_epoch_9.json
docker/: Dockerfile  Dockerfile.console  Dockerfile.dev  Dockerfile.model-generator  Dockerfile.model-inference  Dockerfile.server  Dockerfile.training  README.md  api_server.py  docker-compose.yml
docs/: DOCUMENTATION.md  EXTENDING_PYRL.md  extension_log.json
documents/: AI_MODEL.md  DOCUMENTATION_EN.md  DOCUMENTATION_RU.md  PROJECT_ROADMAP.md  VSCODE_PLUGIN.md
examples/: 00_index.pyrl  01_hello_world.pyrl  01_variables.pyrl  02_operators.pyrl  02_variables.pyrl  03_access.pyrl  03_control_flow.pyrl  04_functions.pyrl  05_arrays_hashes.pyrl  06_anonymous_functions.pyrl  06_classes.pyrl  07_exceptions.pyrl  08_builtins.pyrl  08_builtins_ext.pyrl  09_algorithms.pyrl  09_algorithms_ext.pyrl  10000_examples.pyrl  10_http_client.pyrl  10_tests.pyrl  20_perl_regex.pyrl  21_perl_regex_tests.pyrl  COMPREHENSIVE_EXAMPLES.pyrl  INDEX.md  app.pyrl  examples_00001_00100.pyrl  examples_00101_00200.pyrl  examples_00201_00300.pyrl  examples_00301_00400.pyrl  examples_00401_00500.pyrl  examples_00901_01000.pyrl  examples_01001_01100.pyrl  examples_01101_01200.pyrl  examples_01301_01400.pyrl  examples_01401_01500.pyrl  examples_01501_01600.pyrl  (+48 more)
(+157 files in other folders)
